Fixed text alignment in stats by player

--- a/app/static/css/stats.css
+++ b/app/static/css/stats.css
@@ -1,6 +1,13 @@
+td {
+  text-align: center;
+}
+
+th {
+  text-align: center;
+}
+
 td.victory {
   background-color: rgba(0, 255, 0, 0.3);
-  text-align: center;
 }
 
 td.defeat {
